-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.0
-
-
539553a57216c4ece292ff54fb623807c334cdb6 (qt/qtbase/dev)
QDebug output in a test is counted as an error in junitxml.
Steps to reproduce the issue:
- Run the attached test with -o output.xml,junitxml
- Check the .xml file
<?xml version="1.0" encoding="UTF-8" ?> <testsuite name="Test" timestamp="2021-01-12T12:33:07+01:00" tests="3" failures="0" errors="1" time="0.005474"> <properties> <property name="QTestVersion" value="6.1.0"/> <property name="QtVersion" value="6.1.0"/> <property name="QtBuild" value="Qt 6.1.0 (x86_64-little_endian-llp64 shared (dynamic) debug build; by MSVC 2019)"/> </properties> <testcase name="initTestCase" result="pass" time="0.001225"/> <testcase name="test_case1" result="pass" time="0.003018"> <!-- type="qdebug" message="I appear as an error in junitxml" --> </testcase> <testcase name="cleanupTestCase" result="pass" time="0.000004"/> <system-err> <![CDATA[I appear as an error in junitxml]]> </system-err> </testsuite>
| For Gerrit Dashboard: QTBUG-86540 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 329830,8 | QTestlib/JUnit XML: Log most messages to standard output instead of error output | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 329885,8 | Brush up QTestlib/generate_expected_output.py | dev | qt/qtbase | Status: MERGED | +2 | 0 |