src/testlib/qtestelementattribute_p.h
@@ -87,11 +87,12 @@ namespace QTest {
         LET_Property = 0,
         LET_Properties = 1,
         LET_Failure = 2,
-        LET_Error = 3,
+        LET_Message = 3,
         LET_TestCase = 4,
         LET_TestSuite = 5,
         LET_Benchmark = 6,
-        LET_SystemError = 7
+        LET_SystemError = 7,
+        LET_SystemOutput = 8
     };
 }
 
